--- a/wicket-ui/pom.xml
+++ b/wicket-ui/pom.xml
@@ -20,10 +20,9 @@
 
     <parent>
         <artifactId>wicket-project</artifactId>
-        <groupId>lt.eif.viko</groupId>
+        <groupId>lt.lt</groupId>
         <version>0.0.1-SNAPSHOT</version>
     </parent>
-    <groupId>lt.eif.viko</groupId>
     <artifactId>wicket-ui</artifactId>
     <packaging>war</packaging>
     <version>0.0.1-SNAPSHOT</version>
@@ -54,11 +53,6 @@
             <artifactId>wicket-core</artifactId>
             <version>${wicket.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.wicketstuff</groupId>
-            <artifactId>annotation</artifactId>
-            <version>1.4.21</version>
-        </dependency>
         <!-- OPTIONAL DEPENDENCY
         <dependency>
                 <groupId>org.apache.wicket</groupId>
@@ -71,12 +65,12 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
-            <version>1.6.4</version>
+            <version>1.7.5</version>
         </dependency>
         <dependency>
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
-            <version>1.2.16</version>
+            <version>1.2.17</version>
         </dependency>
 
         <!--  JUNIT DEPENDENCY FOR TESTING -->
@@ -95,7 +89,7 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>lt.eif.viko</groupId>
+            <groupId>lt.lt</groupId>
             <artifactId>domain</artifactId>
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
